--- a/entry.css
+++ b/entry.css
@@ -72,3 +72,46 @@
     border: 3px solid ;
     color: #8c9197;
 }
+
+#info{
+    min-height:100vh;
+    background-color:#8c9197;
+  }
+  
+  .content {
+    position: relative;
+    top: 250px;
+    left: 00px;
+    margin: 0 auto;
+    max-width: 960px;
+    width: 500px;
+    height: 150px;
+  
+  }
+  
+  #content_drive::after{
+    content: "\a";
+    white-space: pre;
+  }
+  
+  #content_drive1::after{
+    content: "\a";
+    white-space: pre;
+  }
+  #content_drive2::after{
+    content: "\a";
+    white-space: pre;
+  }
+  #blank::after{
+    content: "\a";
+    white-space: pre;
+  }
+    
+  h2{
+    font-size: 40px;
+    font-family: 'planet_kosmosregular', Arial, sans-serif;
+    color: darkred;
+  
+  }  
+
+  :root { scroll-behavior: smooth; }
