--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,8 +4,8 @@
 
 @font-face {
     font-family: 'planet_kosmosregular';
-    src: url('drivefont/plank___-webfont.woff2') format('woff2'),
-         url('drivefont/plank___-webfont.woff') format('woff');
+    src: url('plank___-webfont.woff2') format('woff2'),
+         url('plank___-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
